--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -50,7 +50,6 @@ androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
 androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
-androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 
 activity-ktx = { group = "androidx.activity",name = "activity-ktx", version.ref = "activity" }
@@ -95,6 +94,9 @@ compose = [
     "androidx-ui", "androidx-ui-graphics", "androidx-ui-tooling-preview", "androidx-activity-compose",
     "androidx-navigation-fragment-compose", "androidx-material3", "androidx-ui-graphics-android",
     "androidx-navigation-compose",
+]
+composeDebug = [
+    "androidx-ui-tooling", "androidx-ui-test-manifest",
 ]
 coroutines = [
     "coroutines-core", "coroutines-android"
